Created Classes for Room and Booking Data Structures

--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'jacoco'
 apply plugin: 'application'
 
 
-mainClassName = 'RoomBookingSystem.Main'
+mainClassName = 'RoomBookingSystem.RoomBooking'
 
 repositories {
     jcenter()
